kube/shop/base/front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-app
  namespace: shop-ns
  labels:
    app: front-app
spec:
  selector:
    matchLabels:
      app: front-app
  template:
    metadata:
      labels:
        app: front-app
        version: 0.0.3
    spec:
      serviceAccountName: front-sa
      containers:
      - name: front-app
        image: radkeke/front:0.0.5
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "5m"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 20
          failureThreshold: 5
        readinessProbe:
            httpGet:
                path: /actuator/health/liveness
                port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 2
