kube/shop/base/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  namespace: shop-ns
spec:
  selector:
    app: front-app
  ports:
  - port: 8080
    targetPort: 8080
