kube/shop/base/front/v-service.yaml
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: front-vsvc
  namespace: shop-ns
spec:
  hosts:
  - "*"
  gateways:
    - shop-gateway
  http:
    - match:
        - uri:
            exact: /
        - uri:
            prefix: /css
      route:
      - destination:
          host: front-svc
          port:
            number: 8080
