kube/shop/base/front/authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: front-authz
  namespace: shop-ns
spec:
  selector:
    matchLabels:
      app: front-app
  action: ALLOW
  rules:
    - from:
      - source:
          principals: ["*"]
      to:
      - operation:
          methods: ["GET"]
          paths: ["/", "/css/*"]
